--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Beach House Guest Portal</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<style>
-  #login-screen { position:fixed; inset:0; background:#f8fafc; z-index:50; display:flex; flex-direction:column; align-items:center; justify-content:center; }
-  .pin-dot { width: 14px; height: 14px; border-radius: 50%; border: 2px solid #cbd5e1; transition: all 0.2s; }
-  .pin-dot.filled { background: #2563eb; border-color: #2563eb; transform: scale(1.2); }
-  .keypad-btn { width: 80px; height: 80px; border-radius: 50%; background: white; box-shadow: 0 2px 4px rgba(0,0,0,0.05); font-size: 1.5rem; font-weight: 700; transition: all 0.1s; border: 1px solid #e2e8f0; display: flex; align-items: center; justify-content: center; }
-  .keypad-btn:active { transform: scale(0.9); background: #f1f5f9; }
-  .locked-overlay { position:fixed; inset:0; background:rgba(15, 23, 42, 0.98); z-index:100; display:none; flex-direction:column; align-items:center; justify-content:center; color:white; backdrop-filter: blur(10px); }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Beach House Guest Portal</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        #login-screen { position:fixed; inset:0; background:#f8fafc; z-index:50; display:flex; flex-direction:column; align-items:center; justify-content:center; }
+        .pin-dot { width: 14px; height: 14px; border-radius: 50%; border: 2px solid #cbd5e1; transition: all 0.2s; }
+        .pin-dot.filled { background: #2563eb; border-color: #2563eb; transform: scale(1.2); }
+        .keypad-btn { width: 80px; height: 80px; border-radius: 50%; background: white; box-shadow: 0 2px 4px rgba(0,0,0,0.05); font-size: 1.5rem; font-weight: 700; transition: all 0.1s; border: 1px solid #e2e8f0; display: flex; align-items: center; justify-content: center; }
+        .keypad-btn:active { transform: scale(0.9); background: #f1f5f9; }
+        .locked-overlay { position:fixed; inset:0; background:rgba(15, 23, 42, 0.98); z-index:100; display:none; flex-direction:column; align-items:center; justify-content:center; color:white; backdrop-filter: blur(10px); }
+    </style>
 </head>
 <body class="bg-slate-50 font-sans text-slate-900 min-h-screen select-none">
 
@@ -58,13 +58,13 @@
                 <h1 class="text-2xl font-black tracking-tighter">THE BEACH HOUSE</h1>
                 <p id="current-time" class="text-blue-600 font-bold text-xs uppercase"></p>
             </div>
-            <button onclick="location.reload()" class="bg-slate-200 text-slate-600 px-4 py-2 rounded-full text-[10px] font-black uppercase">End Session</button>
+            <button onclick="location.reload()" class="bg-slate-200 text-slate-600 px-4 py-2 rounded-full text-[10px] font-black uppercase">Exit</button>
         </header>
 
         <main class="space-y-6">
-            <div id="announcement-banner" class="hidden animate-bounce">
+            <div id="announcement-banner" class="hidden">
                 <div class="bg-indigo-600 text-white p-5 rounded-[2rem] flex items-center gap-4 shadow-xl">
-                    <span class="text-2xl">📢</span>
+                    <span class="text-2xl animate-bounce">📢</span>
                     <p id="announcement-text" class="font-bold leading-tight"></p>
                 </div>
             </div>
@@ -88,119 +88,128 @@
 </div>
 
 <script>
-const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
-const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
-const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
+    const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
+    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-let pinInput = "";
-let currentGuest = null;
+    let pinInput = "";
+    let currentGuest = null;
 
-// TIME DISPLAY
-function updateTime() {
-    const now = new Date();
-    document.getElementById('current-time').innerText = now.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
-}
-setInterval(updateTime, 1000);
-
-// PIN KEYPAD LOGIC
-function updatePinDisplay() {
-    for (let i = 0; i < 6; i++) {
-        const dot = document.getElementById(`dot-${i}`);
-        dot.className = i < pinInput.length ? "pin-dot filled" : "pin-dot";
+    // PIN LOGIC
+    function updatePinDisplay() {
+        for (let i = 0; i < 6; i++) {
+            const dot = document.getElementById(`dot-${i}`);
+            dot.className = i < pinInput.length ? "pin-dot filled" : "pin-dot";
+        }
     }
-}
 
-function pressKey(num) {
-    if (pinInput.length < 6) {
-        pinInput += num;
-        updatePinDisplay();
-        if (pinInput.length === 6) setTimeout(validatePIN, 300);
+    function pressKey(num) {
+        if (pinInput.length < 6) {
+            pinInput += num;
+            updatePinDisplay();
+            if (pinInput.length === 6) setTimeout(validatePIN, 300);
+        }
     }
-}
 
-function clearPin() {
-    pinInput = "";
-    document.getElementById('instruction-text').innerText = "Enter your 6-digit access code";
-    document.getElementById('instruction-text').classList.remove('text-red-600');
-    updatePinDisplay();
-}
-
-async function validatePIN() {
-    const { data } = await supabaseClient.from('families').select('*').eq('access_code', pinInput).maybeSingle();
-    if (data) {
-        currentGuest = data;
-        enterPortal();
-    } else {
-        document.getElementById('instruction-text').innerText = "WRONG CODE - TRY AGAIN";
-        document.getElementById('instruction-text').classList.add('text-red-600');
+    function clearPin() {
         pinInput = "";
+        const label = document.getElementById('instruction-text');
+        label.innerText = "Enter your 6-digit access code";
+        label.style.color = "";
         updatePinDisplay();
     }
-}
 
-// PORTAL LOGIC
-function enterPortal() {
-    document.getElementById('login-screen').classList.add('hidden');
-    document.getElementById('main-app').classList.remove('hidden');
-    document.getElementById('guest-title').innerText = `Hello, ${currentGuest.last_name}s!`;
-    document.getElementById('stay-info').innerText = `${currentGuest.check_in_date} — ${currentGuest.check_out_date}`;
-    renderCalendar();
-    loadMessages();
-    checkAnnouncements();
-    checkLockStatus();
-    setInterval(loadMessages, 5000);
-    setInterval(checkAnnouncements, 10000);
-    setInterval(checkLockStatus, 3000);
-}
+    async function validatePIN() {
+        // We search by access_code and ensure it's a string match
+        const { data, error } = await supabaseClient
+            .from('families')
+            .select('*')
+            .eq('access_code', pinInput)
+            .maybeSingle();
 
-function renderCalendar() {
-    const cal = document.getElementById('calendar');
-    cal.innerHTML = '';
-    const start = new Date(currentGuest.check_in_date);
-    const end = new Date(currentGuest.check_out_date);
-    const today = new Date(); today.setHours(0,0,0,0);
-
-    for (let d = new Date(start); d <= end; d.setDate(d.getDate() + 1)) {
-        const day = document.createElement('div');
-        const isToday = d.toDateString() === today.toDateString();
-        day.className = `aspect-square flex items-center justify-center rounded-xl border font-bold text-xs ${isToday ? 'bg-blue-600 text-white border-blue-600 shadow-lg' : 'bg-white text-slate-400'}`;
-        day.innerText = d.getDate();
-        cal.appendChild(day);
+        if (data) {
+            currentGuest = data;
+            enterPortal();
+        } else {
+            const label = document.getElementById('instruction-text');
+            label.innerText = "WRONG CODE - TRY AGAIN";
+            label.style.color = "#ef4444";
+            pinInput = "";
+            updatePinDisplay();
+        }
     }
-}
 
-async function loadMessages() {
-    const { data } = await supabaseClient.from('messages').select('*').eq('family_id', currentGuest.id).order('created_at', {ascending:true});
-    document.getElementById('message-list').innerHTML = data?.map(m => `
-        <div class="p-4 rounded-2xl text-sm ${m.sent_by==='guest'?'bg-blue-600 text-white self-end ml-10 shadow-md':'bg-slate-200 text-slate-700 self-start mr-10'}">
-            ${m.message}
-        </div>
-    `).join('') || '';
-    const list = document.getElementById('message-list');
-    list.scrollTop = list.scrollHeight;
-}
+    function enterPortal() {
+        document.getElementById('login-screen').classList.add('hidden');
+        document.getElementById('main-app').classList.remove('hidden');
+        document.getElementById('guest-title').innerText = `Hello, ${currentGuest.last_name}s!`;
+        document.getElementById('stay-info').innerText = `${currentGuest.check_in_date} — ${currentGuest.check_out_date}`;
+        
+        renderCalendar();
+        loadMessages();
+        checkAnnouncements();
+        checkLockStatus();
+        
+        setInterval(loadMessages, 5000);
+        setInterval(checkAnnouncements, 10000);
+        setInterval(checkLockStatus, 3000);
+    }
 
-async function checkAnnouncements() {
-    const { data } = await supabaseClient.from('announcements').select('*').limit(1).maybeSingle();
-    const banner = document.getElementById('announcement-banner');
-    if (data && new Date(data.expires_at) > new Date()) {
-        document.getElementById('announcement-text').innerText = data.message;
-        banner.classList.remove('hidden');
-    } else { banner.classList.add('hidden'); }
-}
+    function renderCalendar() {
+        const cal = document.getElementById('calendar');
+        cal.innerHTML = '';
+        const start = new Date(currentGuest.check_in_date);
+        const end = new Date(currentGuest.check_out_date);
+        const today = new Date(); today.setHours(0,0,0,0);
 
-async function checkLockStatus() {
-    const { data } = await supabaseClient.from('controls').select('is_locked').eq('id', 1).maybeSingle();
-    document.getElementById('locked-overlay').style.display = data?.is_locked ? 'flex' : 'none';
-}
+        for (let d = new Date(start); d <= end; d.setDate(d.getDate() + 1)) {
+            const day = document.createElement('div');
+            const isToday = d.toDateString() === today.toDateString();
+            day.className = `aspect-square flex items-center justify-center rounded-xl border font-bold text-xs ${isToday ? 'bg-blue-600 text-white border-blue-600 shadow-lg' : 'bg-white text-slate-400'}`;
+            day.innerText = d.getDate();
+            cal.appendChild(day);
+        }
+    }
 
-document.getElementById('send-btn').onclick = async () => {
-    const input = document.getElementById('guest-msg');
-    if(!input.value.trim()) return;
-    await supabaseClient.from('messages').insert({ family_id: currentGuest.id, message: input.value, sent_by: 'guest' });
-    input.value = '';
-    loadMessages();
-};
+    async function loadMessages() {
+        const { data } = await supabaseClient.from('messages').select('*').eq('family_id', currentGuest.id).order('created_at', {ascending:true});
+        document.getElementById('message-list').innerHTML = data?.map(m => `
+            <div class="p-4 rounded-2xl text-sm ${m.sent_by==='guest'?'bg-blue-600 text-white self-end ml-10 shadow-md':'bg-slate-200 text-slate-700 self-start mr-10'}">
+                ${m.message}
+            </div>
+        `).join('') || '';
+        const list = document.getElementById('message-list');
+        list.scrollTop = list.scrollHeight;
+    }
+
+    async function checkAnnouncements() {
+        const { data } = await supabaseClient.from('announcements').select('*').limit(1).maybeSingle();
+        const banner = document.getElementById('announcement-banner');
+        if (data && new Date(data.expires_at) > new Date()) {
+            document.getElementById('announcement-text').innerText = data.message;
+            banner.classList.remove('hidden');
+        } else { banner.classList.add('hidden'); }
+    }
+
+    async function checkLockStatus() {
+        const { data } = await supabaseClient.from('controls').select('is_locked').eq('id', 1).maybeSingle();
+        document.getElementById('locked-overlay').style.display = data?.is_locked ? 'flex' : 'none';
+    }
+
+    document.getElementById('send-btn').onclick = async () => {
+        const input = document.getElementById('guest-msg');
+        if(!input.value.trim()) return;
+        await supabaseClient.from('messages').insert({ family_id: currentGuest.id, message: input.value, sent_by: 'guest' });
+        input.value = '';
+        loadMessages();
+    };
+
+    function updateTime() {
+        const now = new Date();
+        document.getElementById('current-time').innerText = now.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
+    }
+    updateTime();
+    setInterval(updateTime, 1000);
 </script>
 </body>
 </html>
